# MuMMIE

./: .gitignore  .mailmap  README.md  pyproject.toml
.virtual_documents/code/: patents_explorer.ipynb
code/: comps_props.csv  evaluations.ipynb  patents_explorer.ipynb  property_mapper.py
data/excel/: CN101033114 _table-33959.xlsx  CN101058477_table-35472.xlsx  CN101072676A_table-30659.xlsx  CN101092308B_table-35489.xlsx  CN1308591_table-24104.xlsx  CN1326903_table-28556.xlsx  CN1489965_table-37874.xlsx  CN1495138_table-30623.xlsx  CN1522980_table-28312.xlsx  CN1771211_table-28366.xlsx  FR1027316_table-16101.xlsx  FR1172977_table-29832.xlsx  FR1242292_table-37871.xlsx  FR1247560_table-29840.xlsx  FR1388413_table-17489.xlsx  FR1484178_table-30674.xlsx  FR2511360_table-8590.xlsx  FR2564087_table-8498.xlsx  FR2650266_table-4410.xlsx  FR2775476_table-17437.xlsx  JP2013209231_table-41689.xlsx  JP2013520387_table-39169.xlsx  JP2013520388_table-43286.xlsx  JP2014019632_table-41679.xlsx  JP2014504250_table-39897.xlsx  JP2015013773_table-42776.xlsx  JP2015509903_table-43872.xlsx  JP5454585_table-40257.xlsx  JP5613164_table-40102.xlsx  JP5743125_table-43288.xlsx  JP5763852_table-44883.xlsx  KR20160040680_table-42977.xlsx  KR20170007352_table-43529.xlsx  (+22 more)
mummie/: __init__.py  core.py  prompts.py  schemas.py
scripts/: direct_api_example.py  dspy_cerebras.py  dspy_pdf.py  dspy_pdf2image.py  dspy_pdf2text.py  dspy_pdf2text_w_marker.py  dspy_pdf2text_w_marker2.py  eval_extraction.py  evals.ipynb  example_format_and_xlsx.py  markerPDF.ipynb  marker_pdf.py  vis.py
(+291 files in other folders)
